2020-12-29  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-mode.el (howm-template-title):
	delete obsolete comment

	* cheat-font-lock.el (cheat-font-lock-fontify):
	fix warning on font-lock-fontify-buffer in byte compiling

2020-10-15  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: set version as 1.4.7-snapshot2

2020-09-14  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-common.el (howm-call-process-last-command):
	fix 'invalid-read-syntax "#"' in docstring

2018-09-29  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: set version as 1.4.7-snapshot1

2019-12-31  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.6

2019-08-18  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: set version as 1.4.6-snapshot3

	* howm-common.el (howm-decode-time): fix for new decode-time
	thx > U5948U5e7eU4e43
	https://twitter.com/U5948U5e7eU4e43/status/1162732269347336193
	http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=b06917a4912a60402025286d07d4a195749245c4

2018-12-31  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.5

2018-09-29  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: set version as 1.4.5-snapshot3

2018-09-29  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* update autotools

2018-09-27  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-mode.el
	(howm-migemo-get-pattern, howm-migemo-client, howm-migemo-client-option):
	support cmigemo as an alternative to migemo-client

2018-03-31  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-mode.el: fix wrong warning "Requiring howm-mode is obsolete"

2018-02-25  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: set version as 1.4.5-snapshot2

2018-02-23  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-menu-fr.el: translate menu documents to French
	thx > Xavier Maillard san (xavier at maillard.im)

2018-02-13  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-vars.el (howm-menu-lang): fix "Lisp error: (void-function caddr)"
	thx > dareka (2018-02-13 13:51:08)