@@ -1,5 +1,5 @@
 ;;; gfunc.el --- support for generic function
-;;; Copyright (C) 2005-2019
+;;; Copyright (C) 2005-2020
 ;;;   HIRAOKA Kazuyuki <khi@users.osdn.me>
 ;;;
 ;;; This program is free software; you can redistribute it and/or modify
