@@ -1,6 +1,6 @@
 ;;; howm-lang-ja.el --- Wiki-like note-taking tool
 ;;; -*- Coding: iso-2022-7bit -*-
-;;; Copyright (C) 2005-2019
+;;; Copyright (C) 2005-2020
 ;;;   HIRAOKA Kazuyuki <khi@users.osdn.me>
 ;;;
 ;;; This program is free software; you can redistribute it and/or modify
