@@ -1,3 +1,7 @@
+2020-12-31  HIRAOKA Kazuyuki  <khi@users.osdn.me>
+
+	* howm.el.in: update copyright years
+
 2020-12-29  HIRAOKA Kazuyuki  <khi@users.osdn.me>
 
 	* howm-mode.el (howm-template-title):
